--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -3,151 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadeado com Animações, Som e Erro</title>
+    <title>Cadeado Criado com CSS</title>
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
             background-color: #f2f2f2;
+            margin: 0;
+            flex-direction: column; /* Alinha o texto acima do cadeado */
         }
 
-        .lock-container {
-            position: relative;
-            text-align: center;
-        }
-
-        .lock-image {
-            width: 200px;
-            height: 300px;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lock_icon_2.svg/1024px-Lock_icon_2.svg.png');
-            background-size: contain;
-            background-repeat: no-repeat;
-            margin-bottom: 20px;
-            transition: transform 0.2s;
-        }
-
-        .dial {
-            width: 40px;
-            height: 60px;
-            background-color: #777;
-            display: inline-block;
-            margin: 0 5px;
-            text-align: center;
-            line-height: 60px;
-            font-size: 30px;
-            font-weight: bold;
-            color: white;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .message {
-            margin-top: 20px;
-            text-align: center;
-            font-size: 20px;
-            color: #333;
-            opacity: 0;
-            animation: fadeIn 1s forwards;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        .celebration {
+        /* Estilo da saudação */
+        .saudacao {
             font-size: 24px;
-            color: green;
-            font-weight: bold;
-            opacity: 0;
-            animation: fadeInCelebration 2s forwards;
+            color: #333;
+            margin-bottom: 20px; /* Espaçamento entre o texto e o cadeado */
         }
 
-        @keyframes fadeInCelebration {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+        .cadeado {
+            width: 100px;
+            height: 150px;
+            background-color: #333;
+            border-radius: 15px;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
         }
 
-        /* Animação de erro (vibração) */
-        @keyframes shake {
-            0% { transform: translateX(0); }
-            25% { transform: translateX(-10px); }
-            50% { transform: translateX(10px); }
-            75% { transform: translateX(-10px); }
-            100% { transform: translateX(0); }
+        /* Fechadura */
+        .fechadura {
+            width: 60px;
+            height: 60px;
+            background-color: #555;
+            border-radius: 10px;
+            position: absolute;
+            top: 20px;
         }
 
-        .error {
-            animation: shake 0.5s ease-in-out;
+        /* O corpo do cadeado */
+        .corpo {
+            width: 50px;
+            height: 70px;
+            background-color: #444;
+            border-radius: 10px;
+        }
+
+        /* O gancho do cadeado */
+        .gancho {
+            width: 20px;
+            height: 40px;
+            background-color: #222;
+            border-radius: 10px;
+            position: absolute;
+            top: -20px;
+        }
+
+        .gancho::before {
+            content: '';
+            width: 50px;
+            height: 30px;
+            background-color: #222;
+            position: absolute;
+            left: -15px;
+            top: 0;
+            border-radius: 50%;
         }
     </style>
 </head>
 <body>
 
-<div class="lock-container">
-    <div class="lock-image"></div> <!-- Imagem do cadeado -->
-    <div>
-        <div class="dial"><span>0</span></div>
-        <div class="dial"><span>0</span></div>
-        <div class="dial"><span>0</span></div>
-        <div class="dial"><span>0</span></div>
-    </div>
-    <div class="message">
-        <p>Digite a senha correta para abrir o cadeado!</p>
-    </div>
-    <div class="celebration" style="display: none;">
-        <p>Parabéns! Você conseguiu abrir o cadeado! Pegue seu prêmio!</p>
-    </div>
+<!-- Saudação -->
+<div class="saudacao">Olá, Felipe!</div>
+
+<!-- Cadeado -->
+<div class="cadeado">
+    <div class="gancho"></div>
+    <div class="fechadura"></div>
+    <div class="corpo"></div>
 </div>
-
-<!-- Adicionando o efeito sonoro -->
-<audio id="successSound" src="sucesso.mp3" preload="auto"></audio>
-<audio id="errorSound" src="erro.mp3" preload="auto"></audio>
-
-<script>
-    let dials = document.querySelectorAll('.dial');
-    let lockCode = [5, 2, 2, 5]; // A senha será 5225
-    let userCode = [];
-
-    dials.forEach((dial, index) => {
-        dial.addEventListener('click', () => {
-            let currentDigit = parseInt(dial.innerText);
-            currentDigit = (currentDigit + 1) % 10;  // Incrementa o número, vai de 0 a 9
-            dial.innerText = currentDigit;
-
-            // Salva a tentativa do usuário
-            userCode[index] = currentDigit;
-
-            // Verifica se a senha está correta
-            if (userCode.toString() === lockCode.toString()) {
-                document.querySelector('.message').innerText = ''; // Remove a mensagem inicial
-                let celebrationMessage = document.querySelector('.celebration');
-                celebrationMessage.style.display = 'block'; // Mostra a mensagem de parabéns
-
-                // Toca o som de sucesso
-                let successSound = document.getElementById('successSound');
-                successSound.play();
-
-                // Remove qualquer efeito de erro anterior
-                document.querySelector('.lock-image').classList.remove('error');
-            } else {
-                // Se a senha estiver errada, aplica o efeito de erro
-                document.querySelector('.lock-image').classList.add('error');
-
-                // Toca o som de erro
-                let errorSound = document.getElementById('errorSound');
-                errorSound.play();
-            }
-        });
-    });
-</script>
 
 </body>
 </html>
