--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadeado com Senha, Animações e Vibração</title>
+    <title>Cadeado com Senha e Vibração</title>
     <style>
         body {
             display: flex;
@@ -50,21 +50,19 @@
             color: #333;
         }
 
-        .confetti {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://cdn.pixabay.com/photo/2017/12/18/20/59/celebration-3020766_960_720.png') repeat;
-            background-size: 50px 50px;
-            animation: confetti 3s ease-out;
-            pointer-events: none;
+        .welcome {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #333;
+            font-weight: bold;
         }
 
-        @keyframes confetti {
-            0% { transform: scale(0); opacity: 1; }
-            100% { transform: scale(1); opacity: 0; }
+        .success-message {
+            font-size: 24px;
+            color: green;
+            margin-top: 20px;
+            font-weight: bold;
+            display: none;
         }
 
         @keyframes shake {
@@ -78,120 +76,37 @@
         .error {
             animation: shake 0.5s ease-in-out;
         }
-
-        .welcome {
-            font-size: 24px;
-            margin-bottom: 20px;
-            color: #333;
-            font-weight: bold;
-        }
-
-        .success-message {
-            font-size: 24px;
-            color: green;
-            margin-top: 20px;
-            font-weight: bold;
-        }
-
-        .confirm-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-
-        .confirm-btn:hover {
-            background-color: #45a049;
-        }
     </style>
 </head>
 <body>
 
 <div class="lock-container">
-    <!-- Mensagem de boas-vindas -->
-    <div class="welcome">
-        Olá Felipe, bem-vindo! Digite a senha para abrir o cadeado.
-    </div>
-    
-    <!-- Imagem do cadeado -->
-    <div class="lock-image"></div>
-
-    <!-- Dials de senha -->
+    <div class="welcome">Olá Felipe!</div> <!-- Boas-vindas -->
+    <div class="lock-image" id="lockImage"></div> <!-- Imagem do cadeado -->
     <div>
         <div class="dial"><span>0</span></div>
         <div class="dial"><span>0</span></div>
         <div class="dial"><span>0</span></div>
         <div class="dial"><span>0</span></div>
     </div>
-
-    <!-- Mensagem de senha -->
     <div class="message">
-        Digite a senha correta para abrir o cadeado!
+        <p>Digite a senha correta para abrir o cadeado!</p>
     </div>
-
-    <!-- Botão de confirmação -->
-    <button class="confirm-btn" onclick="confirmarSenha()">Confirmar Senha</button>
-
-    <!-- Mensagem de sucesso -->
-    <div class="success-message" style="display: none;">
-        Parabéns, você pode pegar a caixa vermelha!
+    <div class="success-message" id="successMessage">
+        <p>Parabéns! Você conseguiu abrir o cadeado! Pegue seu prêmio!</p>
     </div>
 </div>
 
+<!-- Som -->
+<audio id="errorSound" src="erro.mp3" preload="auto"></audio>
+<audio id="successSound" src="sucesso.mp3" preload="auto"></audio>
+
 <script>
     let dials = document.querySelectorAll('.dial');
-    let lockCode = [5, 2, 2, 5]; // Senha correta: 5225
+    let lockCode = [5, 2, 2, 5]; // A senha correta
     let userCode = [];
 
-    // Função para criar a vibração
-    function vibrar() {
-        if (navigator.vibrate) {
-            navigator.vibrate([1000, 100, 1000]); // Vibração forte
-        } else {
-            // Se não funcionar, aplica o efeito de shake na tela
-            document.body.style.animation = "shake 0.5s ease-in-out";
-            setTimeout(() => {
-                document.body.style.animation = ""; // Remove o efeito após a animação
-            }, 500);
-        }
-    }
-
-    // Função para iniciar animação de confetes
-    function animarConfetes() {
-        let confetti = document.createElement('div');
-        confetti.classList.add('confetti');
-        document.body.appendChild(confetti);
-
-        setTimeout(() => {
-            confetti.remove();
-        }, 3000); // Remove confetes após 3 segundos
-    }
-
-    // Função para confirmar a senha
-    function confirmarSenha() {
-        // Verifica se a senha está correta
-        if (userCode.toString() === lockCode.toString()) {
-            document.querySelector('.message').innerText = ''; // Remove a mensagem inicial
-            document.querySelector('.success-message').style.display = 'block'; // Exibe a mensagem de sucesso
-
-            // Inicia animação de confetes
-            animarConfetes();
-
-            // Remove qualquer efeito de erro anterior
-            document.querySelector('.lock-image').classList.remove('error');
-        } else {
-            // Se a senha estiver errada, aplica o efeito de erro
-            document.querySelector('.lock-image').classList.add('error');
-
-            // Vibra o celular ou balança a tela
-            vibrar();
-        }
-    }
-
+    // Configuração para verificar a senha
     dials.forEach((dial, index) => {
         dial.addEventListener('click', () => {
             let currentDigit = parseInt(dial.innerText);
@@ -200,6 +115,31 @@
 
             // Salva a tentativa do usuário
             userCode[index] = currentDigit;
+
+            // Verifica se a senha está correta
+            if (userCode.toString() === lockCode.toString()) {
+                document.querySelector('.message').innerText = ''; // Remove a mensagem de instrução
+                let successMessage = document.getElementById('successMessage');
+                let lockImage = document.getElementById('lockImage');
+                lockImage.style.display = 'none'; // Esconde o cadeado
+                successMessage.style.display = 'block'; // Mostra a mensagem de sucesso
+
+                // Toca o som de sucesso
+                let successSound = document.getElementById('successSound');
+                successSound.play();
+            } else {
+                // Se a senha estiver errada, aplica a animação de erro
+                document.querySelector('.lock-image').classList.add('error');
+
+                // Toca o som de erro
+                let errorSound = document.getElementById('errorSound');
+                errorSound.play();
+
+                // Vibra o celular (forte)
+                if (navigator.vibrate) {
+                    navigator.vibrate([500, 200, 500]); // Vibração forte
+                }
+            }
         });
     });
 </script>
