--- a/pagina_senha.html
+++ b/pagina_senha.html
@@ -19,10 +19,11 @@
             text-align: center;
         }
 
+        /* Atualizei a URL da imagem do cadeado */
         .lock-image {
             width: 200px;
             height: 300px;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Lock_icon_2.svg/1024px-Lock_icon_2.svg.png');
+            background-image: url('https://i.postimg.cc/DW2Jgrwr/ei-1734134378903-removebg-preview.png');
             background-size: contain;
             background-repeat: no-repeat;
             margin-bottom: 20px;
